src/test/deca/context/valid/personalTests/methodAsmBody.deca
// Test Method Asm

class A{
    int a = 10;

    void m() asm("LOAD #1, R1
                WINT R1");
}

{
    A a = new A();
    a.m();
}