src/test/deca/context/invalid/personalTests/testReturn.deca
// Test Return

class A {
    int a;

    void f(){
        return 1;
    }
}

{
    A a;
    a = new A();
    a.f();
}